--- a/css/main.css
+++ b/css/main.css
@@ -2184,7 +2184,7 @@ header .logo a {
  * ------------------------------------------------------------------- 
  */
 #stats {
-	background: #990047;
+	background: #a9001c;
 	padding-top: 7.2rem;
 	padding-bottom: 6rem;
 	text-align: center;
